// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box Snapshots No props 1`] = `
<div
  className="sc-AxjAm eVwfbv"
  size={null}
>
  <p>
    Body
  </p>
</div>
`;

exports[`Box Snapshots Size 1`] = `
<div
  className="sc-AxjAm iQwjBP"
  size="huge"
>
  <p>
    Body
  </p>
</div>
`;

exports[`Box Snapshots invalid Size 1`] = `
<div
  className="sc-AxjAm gdTeWj"
  size={100}
>
  <p>
    Body
  </p>
</div>
`;
